[build-system]
requires = [
    "setuptools>=69.5",
    "wheel",
    "numpy>=1.26"          # NumPy headers are needed at build-time
]
build-backend = "setuptools.build_meta"

[project]
name            = "pyBKT"
version         = "1.5.0"
description     = "Python implementation of Bayesian Knowledge Tracing"
readme          = "README.md"
requires-python = ">=3.8"
license         = {text = "MIT"}

authors = [
  {name = "Zachary Pardos",          email = "zp@berkeley.edu"},
  {name = "Anirudhan Badrinath",     email = "abadrinath@berkeley.edu"},
  {name = "Matthew Jade Johnson",    email = "mattjj@csail.mit.edu"},
  {name = "Christian Garay",         email = "c.garay@berkeley.edu"}
]

keywords = [
  "BKT", "Bayesian Knowledge Tracing", "Hidden Markov Model",
  "Intelligent Tutoring Systems", "Adaptive Learning"
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy",
  "scikit-learn",
  "pandas",
  "requests"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "twine",
  "mypy"
]

[tool.setuptools]
# maps `import pyBKT` → source-py/pyBKT/…
package-dir = {"" = "source-py"}

[tool.setuptools.cmdclass]
build_ext = "build_backend.CustomBuildExtCommand"
