[metadata]
# (all the fields are already in pyproject – cfg keeps only what setuptools
#  still needs at sdist time; feel free to omit completely if using sdist-only)
description-file = README.md

[options]
zip_safe = False
python_requires = >=3.8
packages = find:
package_dir =
    = source-py
include_package_data = True          # include README etc.

[options.packages.find]
where = source-py
